App Update with previous button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="correct_answer">It\'s Correct answer!</string>
     <string name="wrong_answer">Sorry, its wrong answer</string>
     <string name="next">Next</string>
+    <string name="previous">PREVIOUS</string>
 </resources>
